<resources>
    <string name="app_name">YoArbitro</string>
    <string name="btnIniciarSesion">Ingresar</string>
    
    <string name="abrirNav">Abrir el menu</string>
    <string name="cerrarNav">Cerrar el menu</string>

    <!--RegistroActivity-->
    <string name="crearCuenta">Registrate</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="nombreEt">Nombre</string>
    <string name="edadEt">Edad</string>
    <string name="localidadEt">Localidad</string>
    <string name="numeroEt">Numero</string>
    <string name="correoEt">Correo electronico</string>
    <string name="contrasenaEt">Contraseña</string>
    <string name="confirmarContrasenaEt">Confirmar contraseña</string>
    <string name="btnTengoUnaCuenta">¿Tienes una cuenta?</string>
    <string name="btnTengoUnaCuentaSegunda">Clic aquí.</string>

    <!-- IniciarSesionActividad-->
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="correologin">Correo</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="usuarioNuevo">¿No tienes una cuenta?</string>
    <string name="usuarioNuevoSegundo">Registrate aquí.</string>
    <string name="bienvenidaTexto">Bienvenido a YoArbitro</string>

    <!-- MenuPrincipalActivity -->
    <string name="bienvenidoPrincipal">Bienvenido(a)</string>
    <string name="nombresPrincipal">--</string>
    <string name="correoPrincipal">--</string>
    <string name="btnGenerarCedula">Generar Cédulas</string>
    <string name="btnCedulasGuardadas">Cédulas Guardadas</string>
    <string name="btnCenas">Cenas</string>
    <string name="btnFavoritos">Favoritos</string>
    <string name="btnCerrarSesion">Cerrar Sesión</string>

    <!-- MenuPrincipalAdminActivity -->
    <string name="bienvenidoAdminPrincipal">Bienvenido(a)</string>
    <string name="nombresAdminPrincipal">--</string>
    <string name="correoAdminPrincipal">--</string>
    <string name="btnVerArbitros">Consultar Árbitros</string>
    <string name="btnRegistrarEquipos">Registrar Equipos</string>
    <string name="btnCerrarSesionAdmin">Cerrar Sesión</string>
</resources>