<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio.IniciarSesionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"/>

    <TextView
        android:id="@+id/iniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/iniciarSesion"
        android:textSize="@dimen/iniciarSesionSize"
        tools:ignore="MissingConstraints"
        android:paddingTop="40dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/bienvenidaTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bienvenidaTexto"
                android:textColor="@color/verdePasto"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/correoIniciarSesion"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/icono_correo"
                    android:drawablePadding="10dp"
                    android:hint="@string/correologin"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/contrasenaIniciarSesion"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/icono_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/passwordLogin"
                    android:inputType="textPassword"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnIniciarSesion"
                app:cardCornerRadius="15dp" />

            <TextView
                android:id="@+id/usuarioNuevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/usuarioNuevo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usuarioNuevoSegundo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/usuarioNuevoSegundo"
                android:textColor="@color/rojo"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</RelativeLayout>