<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalAdminActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/design_default_color_primary"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenidoPrincipal"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>


                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progresoDatos"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/nombresPrincipalAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/nombresPrincipal"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/correosPrincipalAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/correoPrincipal"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <!-- Botones de menu -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white">

                <Button
                    android:id="@+id/btnRegistrarEquipos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnRegistrarEquipos"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp">

                <Button
                    android:id="@+id/btnCedulasGuardadas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnCedulasGuardadas"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="20sp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp">

                <Button
                    android:id="@+id/btnConsultarArbitros"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnVerArbitros"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="20sp"/>

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnCerrarSesionAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCerrarSesion"
            android:layout_marginTop="20dp"
            app:cornerRadius="20sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>