<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio.RegistrarseDosActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/crearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/crearCuenta"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearCuenta"
        tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/correoEt"
            android:hint="@string/correoEt"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:drawableStart="@drawable/icono_correo"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/contrasenaEt"
            android:hint="@string/contrasenaEt"
            android:inputType="textPassword"
            android:padding="20dp"
            android:drawableStart="@drawable/icono_password"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/confirmarContrasenaEt"
            android:inputType="textPassword"
            android:hint="@string/confirmarContrasenaEt"
            android:padding="20dp"
            android:drawableStart="@drawable/icono_password"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/crearCuenta"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/rojo"
            app:cornerRadius="15dp"
            android:text="@string/btnCancelar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tengoUnaCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/btnTengoUnaCuenta"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tengoUnaCuentaSegunda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/btnTengoUnaCuentaSegunda"
            android:textColor="@color/rojo"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>